@@ -1,0 +1,4 @@
+<KEYVALUE VALUETYPE="string">CIM_System</KEYVALUE>
+<IMETHODRESPONSE NAME="AssociatorNames">
+<INSTANCENAME CLASSNAME="SFCB_RegisteredProfile">
+<KEYVALUE VALUETYPE="string">CIM:SFCB_IP</KEYVALUE>
