@@ -1,0 +1,5 @@
+<INSTANCENAME CLASSNAME="CIM_System">
+<KEYBINDING NAME="Name">
+<IMETHODRESPONSE NAME="AssociatorNames">
+!<INSTANCENAME CLASSNAME="SFCB_RegisteredProfile">
+!<PROPERTY.ARRAY NAME="Roles" TYPE="string">
