@@ -1,0 +1,6 @@
+<IMETHODRESPONSE NAME="ReferenceNames">
+<INSTANCENAME CLASSNAME="CIM_ElementConformsToProfile">
+<KEYBINDING NAME="ConformantStandard">
+<KEYVALUE VALUETYPE="string">CIM:SFCB_IP</KEYVALUE>
+!<PROPERTY.REFERENCE NAME="ConformantStandard">
+!<INSTANCENAME CLASSNAME="CIM_HostedService">
