@@ -1,0 +1,7 @@
+<?xml version="1.0" encoding="utf-8" ?>
+<CIM CIMVERSION="2.0" DTDVERSION="2.0">
+<MESSAGE ID="4711" PROTOCOLVERSION="1.0"><SIMPLEREQ><IMETHODCALL NAME="ReferenceNames"><LOCALNAMESPACEPATH><NAMESPACE NAME="root"></NAMESPACE><NAMESPACE NAME="interop"></NAMESPACE></LOCALNAMESPACEPATH>
+<IPARAMVALUE NAME="ObjectName"><INSTANCENAME CLASSNAME="CIM_IndicationService"><KEYBINDING NAME="Name"><KEYVALUE VALUETYPE="string">sfcb:NO-UUID-FILE-gubber</KEYVALUE></KEYBINDING><KEYBINDING NAME="CreationClassName"><KEYVALUE VALUETYPE="string">CIM_ObjectManager</KEYVALUE></KEYBINDING><KEYBINDING NAME="SystemName"><KEYVALUE VALUETYPE="string">gubber</KEYVALUE></KEYBINDING><KEYBINDING NAME="SystemCreationClassName"><KEYVALUE VALUETYPE="string">CIM_ComputerSystem</KEYVALUE></KEYBINDING></INSTANCENAME></IPARAMVALUE>
+<IPARAMVALUE NAME="ResultClass"><CLASSNAME NAME="CIM_ElementConformsToProfile"/></IPARAMVALUE>
+</IMETHODCALL></SIMPLEREQ>
+</MESSAGE></CIM>
