@@ -1,0 +1,9 @@
+<IMETHODRESPONSE NAME="References">
+<INSTANCENAME CLASSNAME="CIM_HostedService">
+<INSTANCENAME CLASSNAME="CIM_System">
+<KEYBINDING NAME="Name">
+<INSTANCENAME CLASSNAME="CIM_IndicationService">
+<KEYVALUE VALUETYPE="string">CIM_ObjectManager</KEYVALUE>
+<PROPERTY.REFERENCE NAME="Antecedent">
+<INSTANCENAME CLASSNAME="SFCB_RegisteredProfile">
+<PROPERTY.REFERENCE NAME="ManagedElement">
